# Niru

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  SPEC.md  TODO.md  config.yaml  main.py  pyproject.toml
docs/: backfill-spec.md  raiderio-openapi.json
docs/examples/: bliz-get-token.json  bliz-maggiesue-mythic-keystone-profile-season-17.json  bliz-maggiesue-mythic-keystone-profile.json  raider.io-website-requests.txt  us-proudmoore-grrif-profile.json  us-proudmoore-maggiesue-profile.json  us-proudmoore-nyph-profile.json
mplusbot/: __init__.py  app.py  models.py  rate_limit.py  roster.py  service.py  storage.py
mplusbot/clients/: raiderio.py  sheets.py
niru/: __init__.py  app.py  backfill.py  config.py  control_state.py  logging_utils.py  models.py  play_profile.py  play_profile_seed.py  roster.py  service.py  storage.py
niru/clients/: blizzard.py  raiderio.py  raiderio_internal.py  sheets.py
scripts/: docker.sh
tests/: test_backfill.py  test_blizzard_client.py  test_config.py  test_logging.py  test_play_profile.py  test_play_profile_seed.py  test_roster.py  test_service.py  test_sheets.py  test_summary.py
